Kirchhoff's theorem (rectangular aperture)

--- a/tema1_difracion_agujero_rectangular.ipynb
+++ b/tema1_difracion_agujero_rectangular.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOGzIkjpn5sHQVorBB2n4uQ",
+      "authorship_tag": "ABX9TyPecvfAOVDGvCS+UT8Q8aTY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,6 +162,9 @@
       "source": [
         "import numpy as np\n",
         "def analytic_rectangle(xp, yp, P, a,b, lambda_nm):\n",
+        "  '''\n",
+        "  For (xs,ys)=(0,0)\n",
+        "  '''\n",
         "  k = 2.0 * math.pi / (lambda_nm*1e-9)\n",
         "  alfa_p=xp/np.sqrt(xp**2+P**2) #sin(theta)\n",
         "  beta_p=yp/np.sqrt(yp**2+P**2) #sin(phi)\n",
