Kirchhoff's theorem (rectangular aperture) - 09/09/2023

--- a/tema1_difracion_agujero_rectangular.ipynb
+++ b/tema1_difracion_agujero_rectangular.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcbkziXSYDXBde5AseRh+I",
+      "authorship_tag": "ABX9TyM/vlHj0CwAVNanE4gku258",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -894,7 +894,7 @@
       "cell_type": "markdown",
       "source": [
         "**Contributors:**\n",
-        "+ Location of difraccion maxima implemented by Pedro López García <821948@unizar.es>."
+        "+ Location of diffraction maxima implemented by Pedro López García <821948@unizar.es>."
       ],
       "metadata": {
         "id": "7WlUR-bgobGr"
