Kirchhoff's theorem (rectangular aperture) - 11/09/23

--- a/chapter1_diffraction_rectangular_aperture.ipynb
+++ b/chapter1_diffraction_rectangular_aperture.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSZefwIAyET49ROVZgjeDR",
+      "authorship_tag": "ABX9TyOk673zSNEsRPDx4NpK4L6W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,9 +150,9 @@
         "            ya = b * (Ny - 2 * j) / Ny\n",
         "            rs = np.sqrt(S**2 + (xa - xs)**2 + (ya - ys)**2)\n",
         "            rp = np.sqrt(P**2 + (xa - xp)**2 + (ya - yp)**2)\n",
-        "            # S= zs y P=zp cos(theta)=-cos(N,rs)=-rs*N/|rs| & cos(phi)=rp*N/|rp|\n",
-        "            theta = -math.acos(S / rs)\n",
-        "            phi = math.acos(P / rp)\n",
+        "            # S=|zs| y P=|zp| cos(theta)=cos(N,-rs)=<N|-rs>/|rs| & cos(phi)=<N|rp>/|rp|\n",
+        "            theta = math.acos(S / rs)\n",
+        "            phi =   math.acos(P / rp)\n",
         "            E+= diff(theta, phi, k, rs, rp)\n",
         "    E = 1j*E * k * A * dx * dx / (4 * np.pi)\n",
         "    return np.real(E*np.conjugate(E))"
