Optical Light Rays in Gradient-Index media

--- a/chapter1_path_of_light.ipynb
+++ b/chapter1_path_of_light.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png\" /></a><br /><span xmlns:dct=\"http://purl.org/dc/terms/\" property=\"dct:title\"></span> The following notes written by  <span xmlns:cc=\"http://creativecommons.org/ns#\" property=\"cc:attributionName\">Sergio Gutiérrez Rodrigo (<sergut@unizar.es>) </span>. Distributed under  <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\">License Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>"
+        ".<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png\" /></a><br /><span xmlns:dct=\"http://purl.org/dc/terms/\" property=\"dct:title\"></span> The following notes written by  <span xmlns:cc=\"http://creativecommons.org/ns#\" property=\"cc:attributionName\">Sergio Gutiérrez Rodrigo (<sergut@unizar.es>) </span>. Distributed under  <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\">License Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>"
       ],
       "metadata": {
         "id": "tYZjdh8TvE7-"
@@ -65,7 +65,7 @@
         "id": "WZIiI1Zc37UD"
       },
       "source": [
-        "# Eikonal"
+        "# Fermat's principle, Lagrangian optics and the ray equation"
       ]
     },
     {
@@ -190,6 +190,48 @@
       ],
       "metadata": {
         "id": "MwHIDcZcgB3G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# About waves and rays"
+      ],
+      "metadata": {
+        "id": "xLxwAxyEaGi3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El momento $\\vec p$ se define a partir del lagrangiano $L$ como\n",
+        "\n",
+        "1. $p_i=\\dfrac{\\partial L}{\\partial x_i'}$ where $x_1 = x, x_2= y, x_3= z$\n",
+        "2. Además $p_i=\\dfrac{\\partial L}{\\partial x_i'}=n\\dfrac{d x_i}{ds}$ para el lagrangiano óptico."
+      ],
+      "metadata": {
+        "id": "DLnpJ1fkaGZY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. $L=n\\dfrac{x_1'}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}}+n\\dfrac{x_2'}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}}+n\\dfrac{x_3'}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}} \\implies L=\\vec v \\vec p$\n",
+        "\n",
+        "4. Usando (3) en $$\\mathcal{L} = \\int_A^B n \\, ds=\\int_A^B L(x_i,x_i',t) \\, dt$$\n",
+        "Se llega a que $$\\mathcal{L} = \\int_A^B \\vec p \\,. d\\vec l$$\n",
+        " + Se ha utilizado que $\\int_{t_1}^{t_2} p_i v_i dt=\\int_{t_1}^{t_2} p_i dx_i$*\n",
+        " + $\\delta \\mathcal{L} = 0$ usando el momento se conoce como princpio de mínima acción (Maupertius).\n",
+        "\n",
+        "5. Otro resultado notable es que: $$\\dfrac{\\partial \\mathcal{L}}{\\partial x_i}=\\int \\dfrac{\\partial L}{\\partial x_i}\\, dt=\\int \\dfrac{d p_i}{d t}\\, dt=\\int dp_i=p_i$$\n",
+        "Y por lo tanto $$\\vec p = \\nabla \\mathcal{L}$$\n",
+        "  + $\\vec p$ es tangente a la trayectoria de la luz (los rayos) en cada punto\n",
+        "  + $\\vec p$ es ortogonal a cualquier superficie $\\ni \\mathcal{L} =cte$ (respecto de una referencia), ya que el gradiente define superficies equipotenciales por ser conservativo $\\int_A^B \\nabla \\mathcal{L} \\, d\\vec l =\\mathcal{L}(B)-\\mathcal{L}(A)$, $\\implies \\int_C \\nabla \\mathcal{L} \\, d\\vec l =0 $ si $C \\in S \\, \\ni \\mathcal{L}(S)=cte$\n",
+        "  + $\\vec p$ es un campo conservativo, ya que $\\int_A^B \\nabla \\mathcal{L} \\, d\\vec l =\\mathcal{L}(B)-\\mathcal{L}(A) \\, \\forall A,B$\n",
+        "  +El camino óptico entre dos frentes de onda es el mismo para cualquier trayectoria seguida. Si $A$ y $B$ pertenecen a un frente de onda $S_1$ y, $C$ y $D$ pertenecen a un frente de onda $S_2 \\implies \\int_B^C n\\,ds=\\int_A^D n\\,ds$"
+      ],
+      "metadata": {
+        "id": "5tr8rV81bBOH"
       }
     },
     {
