Optical Light Rays in Gradient-Index media (21/09/23)

--- a/chapter1_path_of_light.ipynb
+++ b/chapter1_path_of_light.ipynb
@@ -216,7 +216,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. $L=n\\dfrac{x_1'}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}}+n\\dfrac{x_2'}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}}+n\\dfrac{x_3'}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}} \\implies L=\\vec v \\vec p$\n",
+        "3. $L=n\\dfrac{x_1'^2}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}}+n\\dfrac{x_2'^2}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}}+n\\dfrac{x_3'^2}{\\sqrt{x_1'^2+x_2'^2+x_3'^2}} \\implies L=\\vec v \\vec p$\n",
         "\n",
         "4. Usando (3) en $$\\mathcal{L} = \\int_A^B n \\, ds=\\int_A^B L(x_i,x_i',t) \\, dt$$\n",
         "Se llega a que $$\\mathcal{L} = \\int_A^B \\vec p \\,. d\\vec l$$\n",
