--- a/chapter7_gauss_law.ipynb
+++ b/chapter7_gauss_law.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOW1gNKBf28gsnT3bpIH88w",
+      "authorship_tag": "ABX9TyNuy0M74IdIJkzVJCcITGRz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "GMyTZzjZ6eND"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -263,9 +263,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7xK7_ntHYmm2",
-        "outputId": "e2b614a0-ed82-45ce-aea7-c098e36bd34e"
+        "outputId": "7d5328c0-cefc-4f2a-9147-11cd260c53fb"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,9 +311,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HALmjY56DkdZ",
-        "outputId": "0971f353-5833-477c-f919-e303309e199f"
+        "outputId": "f5fe08d3-31d1-4a4b-dc3d-9dc8ceed0a93"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,9 +353,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jNqZzcCKwtMq",
-        "outputId": "1b9800a1-b7c4-48fd-f854-d9ca3205aaa2"
+        "outputId": "c6fe4bfb-b7cf-4e27-816f-170d877b203e"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,14 +383,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2171aeeb-466f-44b1-e4ad-1577322a3c7f"
+        "outputId": "f52c60bd-2133-4f0d-c1ca-1e8b1b33cf59"
       },
       "source": [
         "# Información óptica del sistema\n",
         "sist_1.info_por_dioptrios()\n",
         "print(\"Focal imagen (f'12,v2):\",sist_1.focal_img_v2,\"mm\")"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,6 +416,147 @@
             "*distancias respecto del vértice correspondiente\n",
             "Focal imagen (f'12,v2): 28.235294117647058 mm\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(sist_1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8M3KK8GaFmlE",
+        "outputId": "4ef78180-356e-4a4a-db4a-984734004f2d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " --------------------------------\n",
+            "Parámetros sistema óptico: sist_1\n",
+            "n= [1.0, 1.5, 1.0]\n",
+            "R= [30.0, -30.0]\n",
+            "e= [10.0]\n",
+            "sist_1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cálculo analítico: focal objeto e imagen para una lente"
+      ],
+      "metadata": {
+        "id": "9lhDd4-OGoLx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "+ Superficie 1 (dioptrio 1):\n",
+        "$\\dfrac{1}{s'_1}=\\dfrac{n_1}{n_1's_1}+\\dfrac{n_1'-n_1}{n_1'r_1}$ (Eq. 1)\n",
+        "\n",
+        "+ Superficie 2 (dioptrio 2) a distancia $e$ del primer dioptrio:\n",
+        "$\\dfrac{1}{s'_2}=\\dfrac{n_2}{n_2's_2}+\\dfrac{n_2'-n_2}{n_2'r_2}$ (Eq. 2)\n",
+        "\n",
+        "El acoplo entre las ecuaciones (1) y (2) es simplemente que $s_2=s_1'-e$\n",
+        "\n",
+        "En una lente con índice de refracción en aire $n$ resulta que:\n",
+        "+ $n_1=n_2'=1$\n",
+        "+ $n_1'=n_2=n$\n",
+        "\n",
+        "Entonces:\n",
+        "+ Para cálculo de focal objeto respecto del vértice del dioptrio 1 se impone que: $s_2' \\rightarrow \\infty$ (imagen que forma el sistema óptico en infinito)\n",
+        "\n",
+        "+ Para cálculo de focal imagen respecto del vértice del dioptrio 2 se impone que: $s_1 \\rightarrow \\infty$ (objeto del sistema óptico en infinito)"
+      ],
+      "metadata": {
+        "id": "gTjVwXsWIUb2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Cálculo de focal objeto respecto del vértice del dioptrio 1"
+      ],
+      "metadata": {
+        "id": "2Ir9k6TQKHDr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def focal_objeto_primer_vertice_lente_aire(n,e,r1,r2):\n",
+        "  s1p=e+n*r2/(n-1)\n",
+        "  return r1*s1p/(n*r1+(1-n)*s1p)\n",
+        "\n",
+        "focal_objeto_primer_vertice_lente_aire(n=1.5,e=10.0,r1=30.0,r2=-30.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KHnlGxLdFPM7",
+        "outputId": "f75669e0-d088-4060-9943-a90b9b64e160"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-28.235294117647058"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cálculo de focal imagen respecto del vértice del dioptrio 2"
+      ],
+      "metadata": {
+        "id": "CT6qB-PTHwAh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def focal_imagen_segundo_vertice_lente_aire(n,e,r1,r2):\n",
+        "  s1p=n*r1/(n-1)\n",
+        "  s2=s1p-e\n",
+        "  return r2*s2/(n*r2+(1-n)*s2)\n",
+        "\n",
+        "focal_imagen_segundo_vertice_lente_aire(n=1.5,e=10.0,r1=30.0,r2=-30.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c8059d9-5e64-4eb2-811f-a00830c35c8f",
+        "id": "_7JlMLTjHwAq"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "28.235294117647058"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     },
