--- a/chapter7_gauss_law.ipynb
+++ b/chapter7_gauss_law.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNuy0M74IdIJkzVJCcITGRz",
+      "authorship_tag": "ABX9TyMKTVEWilxOcfJmuci6f+Qe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "GMyTZzjZ6eND"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -263,9 +263,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7xK7_ntHYmm2",
-        "outputId": "7d5328c0-cefc-4f2a-9147-11cd260c53fb"
+        "outputId": "848d9e8b-db73-4a51-8f19-7bd8d560cf6e"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,6 +276,138 @@
             "Función disponible: calc_img\n",
             "Función disponible: calc_lente_compuesta\n",
             "Función disponible: info_por_dioptrios\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ejemplo 0: un único dioptrio"
+      ],
+      "metadata": {
+        "id": "82UCMV_YNe05"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "Longitud focal del vértice trasero/dorsal (último vértice)\n",
+        "'''\n",
+        "# Definición de los dióptrios refractivos\n",
+        "n=[1.0,1.5] # Índices de refracción relativos: [n1,n2,...]\n",
+        "R=[10.0]    # Radios de los dióptrios en mm: [R1,R2,...]\n",
+        "e=[0.0]     # Distancia entre dióptrios en mm: [e12,e23,...]\n",
+        "\n",
+        "# Se crea el sistema óptico\n",
+        "dioptrio=Sistema_optico_gauss('dioptrio',n,R,e)\n",
+        "\n",
+        "# Parámetros cargados\n",
+        "print(dioptrio)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "058b47d0-cad5-4fd9-d89a-508fbb5ecebc",
+        "id": "FM42qXRPNe06"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " --------------------------------\n",
+            "Parámetros sistema óptico: dioptrio\n",
+            "n= [1.0, 1.5]\n",
+            "R= [10.0]\n",
+            "e= [0.0]\n",
+            "dioptrio\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Cálculo imagen para objeto a distancia finita"
+      ],
+      "metadata": {
+        "id": "dFof3gjWOWe1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "Ejemplo objeto-imagen\n",
+        "'''\n",
+        "a1=-50.0 # mm (OJO en OSLO se introducen distancias - quitar el signo)\n",
+        "print(dioptrio.calc_img(a1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "416f8892-adfd-4dd8-856b-4352a0ada297",
+        "id": "_w9CHmKrOWe1"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cálculo posición respecto vértice posterior  1  de la imagen y aumento para objeto a1= -50.0 mm\n",
+            "(49.99999999999999, -0.6666666666666665)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Caracterización completa (con objeto en menos infinito)"
+      ],
+      "metadata": {
+        "id": "4MeJmphCOWe1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d87d0b16-507e-4fe9-a002-8ffc11e23445",
+        "id": "-Us6p4VeOWe2"
+      },
+      "source": [
+        "# Información óptica del sistema\n",
+        "dioptrio.info_por_dioptrios()\n",
+        "print(\"Focal imagen (f'12,v2):\",dioptrio.focal_img_v2,\"mm\")"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Espacio IMAGEN (luz sentido -inf a +inf)\n",
+            "vértice 1\n",
+            "\t Poder refractor (F'1): 50.0 m-1\n",
+            "\t Focal (f'1): 30.0 mm\n",
+            "\t Potencia (P'1): 33.333333333333336 m-1\n",
+            "\t objeto: -inf mm\n",
+            "\t imagen: 30.0 mm\n",
+            "\t aumento: -0.0\n",
+            "\n",
+            "*distancias respecto del vértice correspondiente\n",
+            "Focal imagen (f'12,v2): 30.0 mm\n"
           ]
         }
       ]
@@ -313,7 +445,7 @@
         "id": "HALmjY56DkdZ",
         "outputId": "f5fe08d3-31d1-4a4b-dc3d-9dc8ceed0a93"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +487,7 @@
         "id": "jNqZzcCKwtMq",
         "outputId": "c6fe4bfb-b7cf-4e27-816f-170d877b203e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +522,7 @@
         "sist_1.info_por_dioptrios()\n",
         "print(\"Focal imagen (f'12,v2):\",sist_1.focal_img_v2,\"mm\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +563,7 @@
         "id": "8M3KK8GaFmlE",
         "outputId": "4ef78180-356e-4a4a-db4a-984734004f2d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +583,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Cálculo analítico: focal objeto e imagen para una lente"
+        "# Ejemplo 1: dos dioptrios acoplados (lente) - cálculo analítico (focal objeto e imagen para una lente)"
       ],
       "metadata": {
         "id": "9lhDd4-OGoLx"
@@ -475,7 +607,7 @@
         "Entonces:\n",
         "+ Para cálculo de focal objeto respecto del vértice del dioptrio 1 se impone que: $s_2' \\rightarrow \\infty$ (imagen que forma el sistema óptico en infinito)\n",
         "\n",
-        "+ Para cálculo de focal imagen respecto del vértice del dioptrio 2 se impone que: $s_1 \\rightarrow \\infty$ (objeto del sistema óptico en infinito)"
+        "+ Para cálculo de focal imagen respecto del vértice del dioptrio 2 se impone que: $s_1 \\rightarrow -\\infty$ (objeto del sistema óptico en infinito)"
       ],
       "metadata": {
         "id": "gTjVwXsWIUb2"
@@ -506,7 +638,7 @@
         "id": "KHnlGxLdFPM7",
         "outputId": "f75669e0-d088-4060-9943-a90b9b64e160"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +655,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Cálculo de focal imagen respecto del vértice del dioptrio 2"
+        "## Cálculo de focal imagen respecto del vértice del dioptrio 2"
       ],
       "metadata": {
         "id": "CT6qB-PTHwAh"
@@ -546,7 +678,7 @@
         "outputId": "2c8059d9-5e64-4eb2-811f-a00830c35c8f",
         "id": "_7JlMLTjHwAq"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
